@@ -9,6 +9,8 @@
   when used in a ``raw_id_field``.
 * Fixed a regression which caused the CMS to cache the toolbar when ``CMS_PAGE_CACHE``
   was set to ``True`` and an anon user had ``cms_edit`` set to ``True`` on their session.
+* Fixed a regression which prevented users from overriding content in an inherited
+  placeholder.
 
 
 === 3.4.1 (2016-10-04) ===
